add ignite init